--- a/TD15.ipynb
+++ b/TD15.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -42,23 +42,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original [3 4 1 5 2 8 6]\n",
-      "Décalage 3, 5 [3 4 1 2 5 8 6]\n",
-      "Décalage 1, 6 [3 8 4 1 2 5 6]\n",
-      "Décalage 0, 0 [6 8 4 1 2 5 6]\n",
-      "Décalage 5, 2 [6 8 4 1 2 8 6]\n"
+      "Original [3 4 1 5 2 8 6]\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "index 8 is out of bounds for axis 0 with size 7",
+     "ename": "NameError",
+     "evalue": "name 'decalageADroitebis' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-78e4e4ba3eb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mdecalageADroitebis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Décalage 5, 2\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0mdecalageADroitebis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Décalage out of bounds\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-9-78e4e4ba3eb1>\u001b[0m in \u001b[0;36mdecalageADroitebis\u001b[0;34m(tab, lim1, lim2)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdecalageADroitebis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtab\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlim1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlim2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mi\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mlim2\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mtemp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtab\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlim2\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mlim1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mtab\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtab\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 8 is out of bounds for axis 0 with size 7"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-4d92cba2b678>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mt1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Original\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mdecalageADroitebis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Décalage 3, 5\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mdecalageADroitebis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'decalageADroitebis' is not defined"
      ]
     }
    ],
@@ -92,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -135,19 +130,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 2 3 4 5 6 8]\n"
+     ]
+    }
+   ],
    "source": [
     "def triInsertionRechercheMin(tab):\n",
-    "    \n",
-    "    i = 0\n",
     "    j = len(tab)\n",
-    "    mini = rechercheMin(tab, i, j)\n",
-    "    decADroite(tab, i, ??)\n",
+    "    for i in range (j):\n",
+    "        mini,indice = rechercheMin(tab, i, j)\n",
+    "        decADroite(tab, i,indice+1)\n",
+    "        \n",
+    "triInsertionRechercheMin(t1)\n",
+    "print(t1)\n",
     "# A finir pour la prochaine fois "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 2 3 4 5 6 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Tri par insertion\n",
+    "t1 = np.array([3,4,1,5,2,8,6,1])\n",
+    "\n",
+    "def triInsertion(tab):\n",
+    "    for i in range(len(tab)):\n",
+    "        j=i\n",
+    "        while j>0 and tab[j]<tab[j-1]:\n",
+    "                save=tab[j-1]\n",
+    "                tab[j-1]=tab[j]\n",
+    "                tab[j]=save\n",
+    "                j=j-1\n",
+    "triInsertion(t1)\n",
+    "print(t1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 2 3 4 5 6 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Tri par Bulle\n",
+    "\n",
+    "def triBulle(tab):\n",
+    "    j=1\n",
+    "    for k in range(len(tab)-1):\n",
+    "        \n",
+    "        for i in range(len(tab)-j):\n",
+    "            \n",
+    "            if tab[i]>tab[i+1]:\n",
+    "                save = tab[i]\n",
+    "                tab[i] = tab[i+1]\n",
+    "                tab[i+1] = save\n",
+    "                \n",
+    "        j=j+1\n",
+    "\n",
+    "t1 = np.array([3,4,1,5,2,8,6,1])\n",
+    "t2 = np.array([1,2,3,4,5,8,6,1])\n",
+    "triBulle(t1)\n",
+    "triBulle(t2)\n",
+    "print(t1)\n",
+    "print(t2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercice pour la prochaine fois** : optimiser tri-bulle pour ne plus boucler quand le tableau est trié "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  6.92197797e-310   1.87410957e-316   6.92193959e-310   6.92193959e-310\n",
+      "   6.92193959e-310   6.92193959e-310]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tri par indices :\n",
+    "# t1 = np.array([3,1,5,4,1,2])\n",
+    "# Résultat attentu : indices = [1 4 5 0 3 2]\n",
+    "def triParIndices(tab):\n",
+    "    indices = np.empty(len(tab))\n",
+    "    print(indices)\n",
+    "    \n",
+    "t1 = np.array([3,1,5,4,1,2])   \n",
+    "triParIndices(t1)"
    ]
   },
   {
